Change size of Hello to avoid breaking into 2 lines on mobile devices

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -73,7 +73,7 @@ img
 {
 	#hello
 	{
-		font-size: 8vw;
+		font-size: 7vw;
 	}
 }
 @media screen and (max-width: 610px)
